--- a/FTPFileUpload/FTPFileUpload.csproj
+++ b/FTPFileUpload/FTPFileUpload.csproj
@@ -5,10 +5,25 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackAsTool>true</PackAsTool>
     <PackageOutputPath>./nupkg</PackageOutputPath>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageId>FTPFileUpload</PackageId>
+		<Version>1.0.0</Version>
+		<Authors>dia006</Authors>
+		<Company>MKA Solutions</Company>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CoreFtp" Version="1.4.0" />
+	</ItemGroup>
+
+  <ItemGroup>
+    <None Update="icon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="LICENSE">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
